<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="4dp"
        android:src="@drawable/ic_default_profile"
        android:contentDescription="@string/profile_picture_of_user" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/first_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/lastName"
        android:textSize="15sp"/>


</LinearLayout>