<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="#176B87">


    <RelativeLayout

        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="55dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbarFragmentContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#EEF5FF"
        >

        <ImageView
            android:id="@+id/profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/profile_picture_of_user">
        </ImageView>

        <TextView
            android:id="@+id/first_name"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/first_name"
            android:layout_marginStart="8dp"
            android:textSize="11sp"
            android:layout_below="@id/profile">


        </TextView>

        <TextView
            android:id="@+id/last_name"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/Last_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/profile"
            android:textSize="11sp">


        </TextView>

        <TextView
            android:id="@+id/user_first_name"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_below="@id/first_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:text="@string/user_first_name">

        </TextView>

        <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:text="@string/user_last_name"
            android:id="@+id/user_last_name"
            android:layout_marginTop="2dp"
            android:layout_below="@id/first_name"
            android:layout_toEndOf="@id/user_first_name">

        </TextView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/number"
            android:layout_below="@id/user_first_name"
            android:id="@+id/number"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:textSize="11sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="user number"
            android:layout_below="@id/number"
            android:layout_marginHorizontal="8dp"
            android:id="@+id/user_number">

        </TextView>

        <Button
            android:id="@+id/editButton"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:backgroundTint="#176B87"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:text="Edit">
        </Button>





    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/toolbarFragmentContainer"
        android:name="com.example.eventsigninapp.ToolbarFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/toolbar_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>