<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#EEF5FF">

    <RelativeLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEF5FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/profile_picture_of_user"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/editProfileSubtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePicture"
            android:layout_centerHorizontal="true"
            android:text="click above to edit photo"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/profileDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/editProfileSubtext"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/user_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_first_name"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Last_name"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/user_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_last_name"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/user_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user number"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileDetailsLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/rounded_button_background"
            android:backgroundTint="#2196F3"
            android:text="Edit"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
