<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1">

    <Button
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_button" />

    <TextView
        android:id="@+id/checked_in_users_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="90dp"
        android:background="@color/loveBlue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/checked_in_title_text"
        android:textAllCaps="true"
        android:textColor="@color/color1"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/checked_in_users_count"
        android:layout_width="750dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checked_in_users_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="28dp"
        android:text="@string/checked_in_count"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/checked_in_list"
        android:layout_width="match_parent"
        android:layout_height="474dp"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/button_to_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_map_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/color2"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

</RelativeLayout>